Rename VcApi files to VCApi to match class naming and refactoring the code.
